# duckdb-iceberg-glue-catalog

./: .gitignore  README.md  pyproject.toml  thing.excalidraw
notebooks/iceberg/: iceberg-glue.ipynb  pyproject.toml
src/: .env.dev  extract_load_data_flow.py
src/helpers/: __init__.py  create_duckdb.py  download_trip_data.py
tests/fixtures/: general_fixtures.py
tests/unit_tests/: __init__.py  test__sample.py
