[project]
name = "iceberg"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "awswrangler>=3.11.0",
    "boto3>=1.38.23",
    "duckdb>=1.3.0",
    "pandas>=2.2.3",
    "pulumi-aws>=6.81.0",
    "pyarrow>=18.1.0",
    "pyiceberg>=0.9.1",
]

[dependency-groups]
dev = [
    "jupyterlab>=4.4.3",
]
